# suzume-ai

./: .gitignore  LICENSE  README.md  compute_rgb_stats.py  create_dataset.py  create_dataset_images.py  pyproject.toml
notebook/: make_train_data.ipynb
