[project]
name = "suzume-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.9.4",
    "sam-2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.231",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
